--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,7 +23,7 @@ sites:
     url: https://gram.mha.fi
 
 status-website:
-  cname: status.mha.fi
+  cname: bp.status.mha.fi
   # baseUrl: /your-repo-name
   theme: dark
   logoUrl: https://mha.fi/content/favicon.png
